IPU: add CSI->VDI->MEM and CSI->VDI->PRPVF->MEM capture mode support.

--- a/drivers/media/platform/mxc/capture/Makefile
+++ b/drivers/media/platform/mxc/capture/Makefile
@@ -6,6 +6,8 @@ ifeq ($(CONFIG_VIDEO_MXC_IPU_CAMERA),y)
 	obj-$(CONFIG_MXC_IPU_DEVICE_QUEUE_SDC) += ipu_fg_overlay_sdc.o ipu_bg_overlay_sdc.o
 	obj-$(CONFIG_MXC_IPU_PRP_ENC) += ipu_prp_enc.o ipu_still.o
 	obj-$(CONFIG_MXC_IPU_CSI_ENC) += ipu_csi_enc.o ipu_still.o
+	obj-$(CONFIG_MXC_IPU_VDI_PRP_ENC) += ipu_vdi_prp_enc.o ipu_still.o
+	obj-$(CONFIG_MXC_IPU_VDI_ENC) += ipu_vdi_enc.o ipu_still.o
 endif
 
 ov5640_camera-objs := ov5640.o
