--- a/drivers/media/platform/mxc/capture/Kconfig
+++ b/drivers/media/platform/mxc/capture/Kconfig
@@ -36,11 +36,11 @@ config MXC_TVIN_ADV7180
 	---help---
 	  If you plan to use the adv7180 video decoder with your MXC system, say Y here.
 
-config MXC_TVIN_ISL79985_MIPI
-        tristate "Intersil ISL79985 Video Decoder support"
+config MXC_TVIN_ISL7998X_MIPI
+        tristate "Intersil ISL7998X Video Decoder support"
         depends on !VIDEO_MXC_EMMA_CAMERA && I2C
         ---help---
-          If you plan to use the isl79985 Video Decoder with your MXC system, say Y here.
+          If you plan to use the isl7998X Video Decoder with your MXC system, say Y here.
 
 config MXC_VADC
 	tristate "mxc VADC support"
